tests/snapshots/ast_test__ast_test__parse_variable_with_default_value.snap
---
source: tests/ast_test.rs
expression: "AST::parse(tokens).unwrap()"
---
Document {
    span: Span {
        start: 0,
        end: 10,
    },
    executable: None,
    elements: [
        Variable {
            span: Span {
                start: 0,
                end: 10,
            },
            comment: None,
            name: "foo",
            variable_type: None,
            options_variable_type: None,
            default_value: Some(
                DefaultValue {
                    span: Span {
                        start: 7,
                        end: 10,
                    },
                    value: "abc",
                },
            ),
            nullable: false,
        },
    ],
}
