tests/snapshots/ast_test__ast_test__parse_variable_with_default_value_number.snap
---
source: tests/ast_test.rs
expression: "AST::parse(tokens)"
---
Document {
    span: Span {
        start: 0,
        end: 12,
    },
    executable: None,
    elements: [
        Variable {
            span: Span {
                start: 0,
                end: 12,
            },
            comment: None,
            name: "port",
            variable_type: Some(
                "number",
            ),
            default_value: Some(
                DefaultValue {
                    span: Span {
                        start: 15,
                        end: 19,
                    },
                    value: "3000",
                },
            ),
        },
    ],
}
