tests/snapshots/ast_test__ast_test__parse_variables_as_nullable.snap
---
source: tests/ast_test.rs
expression: "AST::parse(tokens).unwrap()"
---
Document {
    span: Span {
        start: 0,
        end: 35,
    },
    executable: None,
    elements: [
        Variable {
            span: Span {
                start: 13,
                end: 35,
            },
            comment: None,
            name: "FOO",
            variable_type: Some(
                "String",
            ),
            options_variable_type: Some(
                {
                    "Biz": None,
                    "Foo": None,
                },
            ),
            default_value: None,
            nullable: true,
        },
    ],
}
