tests/snapshots/ast_test__ast_test__parse_variables_name.snap
---
source: tests/ast_test.rs
expression: "AST::parse(tokens).unwrap()"
---
Document {
    span: Span {
        start: 0,
        end: 16,
    },
    executable: None,
    elements: [
        Variable {
            span: Span {
                start: 13,
                end: 16,
            },
            comment: None,
            name: "foo",
            variable_type: None,
            options_variable_type: None,
            default_value: None,
            nullable: false,
        },
    ],
}
