tests/snapshots/ast_test__ast_test__parse_variables_with_comment.snap
---
source: tests/ast_test.rs
expression: "AST::parse(tokens).unwrap()"
---
Document {
    span: Span {
        start: 0,
        end: 38,
    },
    executable: None,
    elements: [
        Variable {
            span: Span {
                start: 35,
                end: 38,
            },
            comment: Some(
                CommentBlock {
                    span: Span {
                        start: 13,
                        end: 22,
                    },
                    raw: [
                        "# comment",
                    ],
                },
            ),
            name: "foo",
            variable_type: None,
            options_variable_type: None,
            default_value: None,
            nullable: false,
        },
    ],
}
