tests/snapshots/ast_test__ast_test__should_decorate_syntax_error.snap
---
source: tests/ast_test.rs
expression: "SyntaxError::new(\"fail\", Span { start: 14, end: 17 }).debug_payload(&payload)"
---
SyntaxError: fail

>    2 | FOO: String<Max=500>
         ▀▀▀
    at <unknown>:2:1

