tests/snapshots/ast_test__ast_test__should_decorate_syntax_error_2.snap
---
source: tests/ast_test.rs
expression: err.debug_payload(&payload)
---
SyntaxError: fail

>    3 | FOO: String<Max=500>
              ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
>    4 | BIZ: String<Max=500 Min=2>
         ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
>    5 | PORT: Number
         ▀▀▀▀
    at <unknown>:3:6

